// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default input 1`] = `
<form
  className="ant-form ant-form-vertical"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item 
				font-bold text-base mb-7
				false
				undefined
			"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        title="Borrower Key"
      >
        Borrower Key
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="ant-row ant-form-item mb-0"
            style={Object {}}
          >
            <div
              className="ant-col ant-form-item-control"
              style={Object {}}
            >
              <div
                className="ant-form-item-control-input"
              >
                <div
                  className="ant-form-item-control-input-content"
                >
                  <input
                    className="ant-input ant-input-lg 
						border-[0.5px] rounded-[1px]
						focus:shadow-none
						disabled:border-neutral-60/40
						border-neutral-60 focus:ring-neutral-100 focus:border-neutral-100
						
					"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="key"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Disabled input 1`] = `
<form
  className="ant-form ant-form-vertical"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item 
				font-bold text-base mb-7
				text-neutral-60/40
				undefined
			"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        title="Borrower Key"
      >
        Borrower Key
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="ant-row ant-form-item mb-0"
            style={Object {}}
          >
            <div
              className="ant-col ant-form-item-control"
              style={Object {}}
            >
              <div
                className="ant-form-item-control-input"
              >
                <div
                  className="ant-form-item-control-input-content"
                >
                  <input
                    className="ant-input ant-input-disabled ant-input-lg 
						border-[0.5px] rounded-[1px]
						focus:shadow-none
						disabled:border-neutral-60/40
						border-neutral-60 focus:ring-neutral-100 focus:border-neutral-100
						
					"
                    disabled={true}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="key"
                    type="text"
                    value="USBDCKTVGBBK"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Dispaly input 1`] = `
<form
  className="ant-form ant-form-vertical"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item font-bold text-base"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        title="Borrower Key"
      >
        Borrower Key
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="font-medium text-base pt-2 pb-4"
          >
            USBDCKTVGBBK
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Input with description 1`] = `
<form
  className="ant-form ant-form-vertical"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item 
				font-bold text-base mb-7
				false
				undefined
			"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        title="This is a longer question with some more informations under it?"
      >
        This is a longer question with some more informations under it?
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="font-normal text-sm mt-0 mb-[10px]"
          >
            This is a short information text that gives more details about the question.
          </div>
          <div
            className="ant-row ant-form-item mb-0"
            style={Object {}}
          >
            <div
              className="ant-col ant-form-item-control"
              style={Object {}}
            >
              <div
                className="ant-form-item-control-input"
              >
                <div
                  className="ant-form-item-control-input-content"
                >
                  <input
                    className="ant-input ant-input-lg 
						border-[0.5px] rounded-[1px]
						focus:shadow-none
						disabled:border-neutral-60/40
						border-neutral-60 focus:ring-neutral-100 focus:border-neutral-100
						
					"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="key"
                    type="text"
                    value="USBDCKTVGBBK"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Input with error feedback 1`] = `
<form
  className="ant-form ant-form-vertical"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item 
				font-bold text-base mb-7
				false
				border-error
			 ant-form-item-has-feedback ant-form-item-has-error"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        title="Borrower Key"
      >
        Borrower Key
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="ant-row ant-form-item mb-0"
            style={Object {}}
          >
            <div
              className="ant-col ant-form-item-control"
              style={Object {}}
            >
              <div
                className="ant-form-item-control-input"
              >
                <div
                  className="ant-form-item-control-input-content"
                >
                  <input
                    className="ant-input ant-input-lg 
						border-[0.5px] rounded-[1px]
						focus:shadow-none
						disabled:border-neutral-60/40
						border-error focus:ring-error focus:border-error
						
					"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="key"
                    type="text"
                    value="USBDCKTVGBBK"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Input with text 1`] = `
<form
  className="ant-form ant-form-vertical"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <div
    className="ant-row ant-form-item 
				font-bold text-base mb-7
				false
				undefined
			"
    style={Object {}}
  >
    <div
      className="ant-col ant-form-item-label"
      style={Object {}}
    >
      <label
        className=""
        title="Borrower Key"
      >
        Borrower Key
      </label>
    </div>
    <div
      className="ant-col ant-form-item-control"
      style={Object {}}
    >
      <div
        className="ant-form-item-control-input"
      >
        <div
          className="ant-form-item-control-input-content"
        >
          <div
            className="ant-row ant-form-item mb-0"
            style={Object {}}
          >
            <div
              className="ant-col ant-form-item-control"
              style={Object {}}
            >
              <div
                className="ant-form-item-control-input"
              >
                <div
                  className="ant-form-item-control-input-content"
                >
                  <input
                    className="ant-input ant-input-lg 
						border-[0.5px] rounded-[1px]
						focus:shadow-none
						disabled:border-neutral-60/40
						border-neutral-60 focus:ring-neutral-100 focus:border-neutral-100
						
					"
                    disabled={false}
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    placeholder="key"
                    type="text"
                    value="USBDCKTVGBBK"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
